@@ -15,6 +15,16 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Implement feature request #1724356: logging improvements.
+Apply modified patch from Wart.
+New settings log_timestamp and log_timestamp_format to control behaviour.
+Log player creation.
+ common/init.c logger.c
+ include/global.h
+ lib/settings
+ server/c_misc.c init.c
+Nicolas Weeger 2007-05-30
+
 Fix bug #1726632: After useing a # of times on the forge..
 server/alchemy.c: item may change, so its weight too. This leads to invalid carrying.
 Nicolas Weeger 2007-05-30
